# dbComparator

./: .gitignore  README.md  clickable_items_view.py  comparatorGUI.py  comparatorWithUI.py  comparator_gui.py  connector_ui_backend.py  gui_logic.py  process_dates.py  pyproject.toml  query_constructor.py  query_list_iterator.py  requirements.txt  sqlComparing.py  sql_comparing.py  tableData.py  table_data.py  ui_setters.py  unified_comparing_class.py
custom_ui_elements/: advanced_settings.py  clickable_items_view.py  clickable_lineedit.py  progress_window.py  radiobutton_items_view.py
helpers/: config_loader.py  config_saver.py  connection_checker.py  converters.py  dbHelperAlchemy.py  dbcmp_sql_helper.py  df_compare_helper.py  logging_helper.py  mail_helper.py  tables.py
resources/: sql_comparator_backlog.txt
resources/properties/: speedup.properties  speedup.property  sql_comparator.properties
